[gd_scene load_steps=2 format=3 uid="uid://dv6evn4nubf4p"]

[ext_resource type="Script" uid="uid://cpsbh7miysrsy" path="res://node_2d.gd" id="1_wtcfe"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wtcfe")

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 179.0
offset_top = 90.0
offset_right = 464.0
offset_bottom = 121.0
text = "download the forgery example mod"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Nubby's Number Factory .exe Folder"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="FileDialog2" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Local App Data Directory"
position = Vector2i(500, 0)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 176.0
offset_top = 89.0
offset_right = 416.0
offset_bottom = 120.0
text = "select local app data directory"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 179.0
offset_top = 90.0
offset_right = 544.0
offset_bottom = 121.0
text = "select nubbys number factory steam directory"

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
offset_left = 535.0
offset_top = 82.0
offset_right = 784.0
offset_bottom = 123.0
placeholder_text = "mod id (exmod or nuno)"

[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="dir_selected" from="FileDialog2" to="." method="_on_file_dialog_2_dir_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
